--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.14.0",
     "axios": "1.6.8",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "jsonwebtoken": "9.0.2",
     "multer": "1.4.5-lts.1",
-    "prisma": "5.11.0"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
@@ -27,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "7.4.0",
     "@typescript-eslint/parser": "7.4.0",
     "eslint": "8.57.0",
+    "prisma": "5.14.0",
     "supertest": "6.3.4",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
