--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "5.14.0",
     "axios": "1.6.8",
+    "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
@@ -23,6 +24,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/multer": "1.4.11",
