--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "5.14.0",
     "axios": "1.6.8",
     "bcryptjs": "2.4.3",
+    "cloudinary": "2.2.0",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
